--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Roll Roll Roll Your Dice</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <script src="script.js" defer></script>
+  <title>Rolling Dice </title>
 </head>
 <body onload="initialize();">
   <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(223, 209, 191); font-size: 50px;" >Rolling Dice</h1>
